error in covid plot in appendix

--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -24,7 +24,7 @@ urlcolor: blue
 ---
 
 ```{r Setup, include=FALSE, warning=FALSE}
-knitr::opts_chunk$set(echo = FALSE, fig.width=8, fig.height=4, warning=FALSE)
+knitr::opts_chunk$set(echo = FALSE, fig.width=6, fig.height=3, warning=FALSE)
 options(scipen = 0, digits = 3)  # controls base R output
 
 # Package setup
@@ -158,7 +158,7 @@ wsd$country <- recode_factor(wsd$country,  "Iran, Islamic Rep."="Iran", "Bosnia 
 
 We'll do some exploratory plotting for a few key predictors across all years of reported data. 
 
-```{r, fig.width=15, fig.height=6}
+```{r, fig.width=8, fig.height=4}
 # Frequency of Regime Types in our data
 ggplot(data.processed, aes(x=fct_infreq(RegimeType), fill=fct_infreq(RegimeType))) +
   geom_bar(show.legend = FALSE) +
@@ -209,7 +209,7 @@ table(as.factor(wsd.latest$Year_latest)) # see yr frequencies
 
 As seen below, there is a great deal of variability in how many years each country has data reported in the WSD dataset:
 
-```{r}
+```{r, fig.width=6, fig.height=3}
 # averages for numeric
 wsd.avg.num <- wsd %>% arrange(Year) %>%
   group_by(country) %>%
@@ -407,10 +407,10 @@ bins_df <- df_vac_nona_clean %>%
 # merge with main
 df_merged <- merge(df_merged, bins_df, by = c("country"), all.x = TRUE)
 
-# checking that there are no countries with more than 10% vaccinated at their vac_start mark
-df_merged %>%
-  filter(vaccination_events == "vac_start" & people_vaccinated_per_hundred > 10) %>%
-  select(country, vaccination_events, people_vaccinated_per_hundred)
+# # checking that there are no countries with more than 10% vaccinated at their vac_start mark
+# df_merged %>%
+#   filter(vaccination_events == "vac_start" & people_vaccinated_per_hundred > 10) %>%
+#   select(country, vaccination_events, people_vaccinated_per_hundred)
 
 # find dates corresponding to important vaccination milestones
 df_merged <- df_merged %>%
@@ -440,7 +440,7 @@ covid$country <- recode_factor(covid$country, "UK"="United Kingdom", "Gambia"="G
 
 We will start by visualizing some of the most relevant variables and patterns in the cases, deaths and vaccinations data. Further plots can also be found in the Appendix. To view current vaccination status nationally, we bin countries by their latest achieved vaccination rate (per hundred to account for their total populations):
 
-```{r fig.height=6, fig.width=6}
+```{r fig.height=5, fig.width=9}
 # select the most recent reported vaccination percent for every country
 box_pct_vac <- covid %>%
   drop_na(people_vaccinated_per_hundred) %>%
@@ -465,7 +465,7 @@ ggplotly(box_pct_vac, tooltip = "text")
 
 As we can see, vaccination rates are currently sill very variables across the world. 
 
-Let's now pick a few countries to examine the evolution of the number of cases with respect to important vaccination milestones, such as when vaccination start and when progressively greater percentages of the population have been vaccinated. Keep in mind that some countries have not yet reached some of these milestones as of today and therefore, a different number of milestones may be present for each country represented below. 
+Let's now pick a few countries to examine the evolution of the number of cases with respect to important vaccination milestones, such as when vaccination start and when progressively greater percentages of the population have been vaccinated. Keep in mind that some countries have not yet reached some of these milestones as of today and therefore, a different number of milestones may be present for each country represented below. Plots relating COVID-19 deaths with vaccination  milestones can be found in the Appendix.
 
 ```{r}
 # filter some countries
@@ -517,27 +517,6 @@ plot_cases_weekly <- vac_events_sub %>%
     theme(legend.position="bottom", axis.text.x = element_text(angle = 45, vjust = 0.5, hjust = 1))
 
 ggplotly(plot_cases_weekly, tooltip = "text")
-
-# and the number of new deaths?
-plot_deaths_weekly <- vac_events_sub %>%
-  ggplot() + 
-    geom_histogram(aes(x = date, y = daily_new_deaths, color = country, group = country, fill = country), 
-                   stat = "identity", alpha = 0.5, binwidth = 0.1) +
-    geom_line(aes(x = date, y = weekly_new_deaths), color = "darkblue", show.legend = FALSE) + 
-    facet_wrap(~country) +
-  # this will generate some warnings when not all countries have all milestones, nothing to worry about
-    geom_vline(data = vac_start_df, aes(xintercept = as.numeric(date), text = sprintf("Start date: %s", date)), linetype = 2, color = "black") +
-    geom_vline(data = vac_30_df, aes(xintercept = as.numeric(date), text = sprintf("30 pct vaccinated: %s", date)), linetype = 2, color = "grey40") +
-    geom_vline(data = vac_50_df, aes(xintercept = as.numeric(date), text = sprintf("50 pct vaccinated: %s", date)), linetype = 2, color = "grey50") +
-    geom_vline(data = vac_70_df, aes(xintercept = as.numeric(date), text = sprintf("70 pct vaccinated: %s", date)), linetype = 2, color = "grey60") +
-    geom_vline(data = vac_90_df, aes(xintercept = as.numeric(date), text = sprintf("90 pct vaccinated: %s", date)), linetype = 2, color = "grey70") +
-    # geom_text(data = vac_start_df, aes(x = as.Date(date), y = 750000, label = date)) + # add static event labels
-    theme_bw() +
-    ggtitle("Worldwide daily new deaths and vaccination milestones") +
-    theme(legend.position="bottom", axis.text.x = element_text(angle = 45))
-
-ggplotly(plot_deaths_weekly, tooltip = "text")
-
 ```
 
 Based on the plots above, we can see that countries had variable vaccination start dates and that each has reach a different number of vaccination milestones. For instance, Cuba started vaccinating relatively late (May 2021) but had 90% of its population vaccinated by January 2022. In the US, vaccinations started in December 2020 and have reached a rate of 70% in December 2021. It is unclear from these graphs whether vaccinations have direct consequences on the number of cases and/or deaths.  
@@ -774,7 +753,7 @@ PC1 explains 73% of the variance and is therefore an excellent index indicating 
 
 Let's see how the VSI loadings are distributed across countries: 
 
-```{r fig.height=12, fig.width=18}
+```{r fig.height=8, fig.width=16}
 # numerical summary
 #skim(vac.sum.with.VSI)
 # plot sorted VSI scores
@@ -789,7 +768,8 @@ vac.sum.with.VSI %>%
     theme(axis.text.x = element_text(angle = 60, hjust = 1))
 
 #summary(vac.sum.with.VSI$VSI)#VSI range
-
+```
+```{r fig.height=8, fig.width=10}
 # plotting VSI world map using https://cran.r-project.org/web/packages/rworldmap/vignettes/rworldmap.pdf
 sPDF <- joinCountryData2Map(vac.sum.with.VSI, joinCode = "NAME", nameJoinColumn = "country")
 colourPalette <- RColorBrewer::brewer.pal(9, "RdPu") # define colors
@@ -1048,7 +1028,8 @@ lm.full.3.refined <- update(lm.full.2.refined, .~. -ConsumerPriceInflation_avg)
 #Anova(lm.full.3.refined)
 #summary(lm.full.3.refined)
 stargazer(lm.full.3.refined, type = "html", align=TRUE, title = "Full Model")
-
+```
+```{r, fig.height=3, fig.width=5}
 # generating diagnostic plots
 par(mfrow = c(1,2), mar = c(5,2,4,2), mgp = c(3,0.5,0)) # plot(fit3) produces several plots
 plot(lm.full.1.refined, 1, pch = 16) # residual plot
@@ -1533,6 +1514,28 @@ ggplotly(plot_total_vac) # generate interactive plot
 ```
 
 Plots visualizing the a wide range of vaccination rates over time, with some countries reaching high levels of vaccination at a very fast rate such as Gibraltar and Cuba, some countries showing more progressively increasing rates (e.g., European countries) and some countries having low vaccination rates up until today. 
+
+```{r}
+# and the number of new deaths?
+plot_deaths_weekly <- vac_events_sub %>%
+  ggplot() + 
+    geom_histogram(aes(x = date, y = daily_new_deaths, color = country, group = country, fill = country), 
+                   stat = "identity", alpha = 0.5, binwidth = 0.1) +
+    geom_line(aes(x = date, y = weekly_new_deaths), color = "darkblue", show.legend = FALSE) + 
+    facet_wrap(~country) +
+  # this will generate some warnings when not all countries have all milestones, nothing to worry about
+    geom_vline(data = vac_start_df, aes(xintercept = as.numeric(date), text = sprintf("Start date: %s", date)), linetype = 2, color = "black") +
+    geom_vline(data = vac_30_df, aes(xintercept = as.numeric(date), text = sprintf("30 pct vaccinated: %s", date)), linetype = 2, color = "grey40") +
+    geom_vline(data = vac_50_df, aes(xintercept = as.numeric(date), text = sprintf("50 pct vaccinated: %s", date)), linetype = 2, color = "grey50") +
+    geom_vline(data = vac_70_df, aes(xintercept = as.numeric(date), text = sprintf("70 pct vaccinated: %s", date)), linetype = 2, color = "grey60") +
+    geom_vline(data = vac_90_df, aes(xintercept = as.numeric(date), text = sprintf("90 pct vaccinated: %s", date)), linetype = 2, color = "grey70") +
+    # geom_text(data = vac_start_df, aes(x = as.Date(date), y = 750000, label = date)) + # add static event labels
+    theme_bw() +
+    ggtitle("Worldwide daily new deaths and vaccination milestones") +
+    theme(legend.position="bottom", axis.text.x = element_text(angle = 45))
+
+ggplotly(plot_deaths_weekly, tooltip = "text")
+```
 
 Plotting correlations between variables
 
